update app name

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "ianicospreadsheet-admin",
+  "name": "ianicospreadsheet-user",
   "app_id": "",
   "type": "ionic-angular",
   "integrations": {
