--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.5.3",
     "@ionic-native/google-plus": "4.5.3",
+    "@ionic-native/in-app-browser": "^4.5.3",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "2.1.3",
@@ -30,6 +31,7 @@
     "cordova-android": "~7.0.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-googleplus": "^5.2.1",
+    "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -57,7 +59,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.73489202333-g80hgenneh1d4oi4496j404o9pilc0ra"
-      }
+      },
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
